--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lucide-react": "^0.294.0",
     "million": "latest",
     "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dnd": "^16.0.1",
