--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.11",
-    "@prisma/client": "^5.7.0",
+    "@auth/prisma-adapter": "^1.0.12",
+    "@prisma/client": "^5",
     "@prisma/extension-accelerate": "^0.6.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -34,10 +34,8 @@
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -46,18 +44,18 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/parser": "^6",
     "autoprefixer": "^10",
     "dotenv": "^16.3.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-next": "latest",
+    "eslint-config-prettier": "^9",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "lexical": "^0.12.5",
     "postcss": "^8",
-    "prettier": "^3.1.1",
-    "prisma": "^5.7.0",
+    "prettier": "^3",
+    "prisma": "^5",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
