--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.14",
+    "@auth/prisma-adapter": "^1.5.0",
     "@prisma/client": "^5",
-    "@prisma/extension-accelerate": "^0.6.2",
+    "@prisma/extension-accelerate": "^1.0.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -27,20 +27,21 @@
     "@tailwindcss/typography": "^0.5.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2",
-    "cmdk": "^0.2.0",
-    "lucide-react": "^0.307.0",
+    "cmdk": "^0.2.1",
+    "lucide-react": "^0.344.0",
     "million": "latest",
-    "next": "^14.0.4",
-    "next-auth": "^5.0.0-beta.4",
+    "next": "^14.1.2",
+    "next-auth": "^5.0.0-beta.15",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "tailwind-merge": "^2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4",
-    "@lexical/react": "^0.12.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -52,7 +53,6 @@
     "eslint-config-prettier": "^9",
     "eslint-plugin-react": "^7",
     "eslint-plugin-tailwindcss": "^3",
-    "lexical": "^0.12.5",
     "postcss": "^8",
     "prettier": "^3",
     "prisma": "^5",
