--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,8 +4,10 @@ extends:
   - "next/core-web-vitals"
   - "prettier"
   - "plugin:tailwindcss/recommended"
+  - "plugin:eslint-plugin-next-on-pages/recommended"
 plugins:
   - "tailwindcss"
+  - "eslint-plugin-next-on-pages"
 rules:
   "@next/next/no-html-link-for-pages": "off"
   "react/jsx-key": "off"
