--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
+    "next:preview": "next build && next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm pages:build && wrangler pages dev .vercel/output/static",
+    "deploy": "npm pages:build && wrangler pages deploy .vercel/output/static"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.5.0",
-    "@prisma/client": "^5",
-    "@prisma/extension-accelerate": "^1.0.0",
+    "@auth/d1-adapter": "0.7.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -41,6 +42,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1",
+    "@cloudflare/workers-types": "^4",
     "@ianvs/prettier-plugin-sort-imports": "^4",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -53,10 +56,13 @@
     "eslint-config-prettier": "^9",
     "eslint-plugin-react": "^7",
     "eslint-plugin-tailwindcss": "^3",
+    "eslint-plugin-next-on-pages": "^1",
     "postcss": "^8",
     "prettier": "^3",
     "prisma": "^5",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^33",
+    "wrangler": "^3"
   }
 }
