--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,12 @@
 name = "m4yours-visual-editor"
-compatibility_date = "2024-03-04"
+compatibility_date = "2024-03-05"
 
 compatibility_flags = ["nodejs_compat"]
+
+[[d1_databases]]
+binding = "DB"                                       # i.e. available in your Worker on env.DB
+database_name = "prod-m4yours-builder-db"
+database_id = "e86e25e0-e04d-4159-8f69-49af388da712"
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
