fix: d1 db instances

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev .vercel/output/static",
+    "preview": "npm run pages:build && wrangler pages dev .vercel/output/static --compatibility-date=2024-03-07 --compatibility-flag=nodejs_compat",
     "deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static"
   },
   "dependencies": {
